old/deployment/addons/vela-core/templates/vela-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: minion
    nginx.org/rewrites: serviceName=velaux-server rewrite=/
  name: velaux-server-ingress
  namespace: vela-system
spec:
  ingressClassName: nginx
  rules:
  - host: '*.amazonaws.com'
    http:
      paths:
      - backend:
          service:
            name: velaux-server
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
